<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".SplashActivity">

        <ImageView
            android:id="@+id/buttonExit"
            android:layout_width="46dp"
            android:layout_height="33dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_exit" />

        <TextView
            android:id="@+id/textSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="cursive"
            android:text="@string/sign_up"
            android:textSize="50sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="56dp"
                    android:layout_height="23dp"
                    android:text="@string/email"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textPasswordConfir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">


                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_your_surname" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_your_email"/>

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:textSize="16sp"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/passwordWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_limitation"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    android:textColorHint="@color/white"
                    android:visibility="invisible"/>

                <EditText
                    android:id="@+id/editPasswordConfir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_again"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/passwordConfirWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_password"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    android:visibility="invisible"/>

                <Spinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="224dp"
                    android:layout_height="25dp"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"/>


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/register"
            android:textSize="20sp"/>


    </LinearLayout>
</ScrollView>
