<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="arial"
        android:text="@string/login"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textColorLink="#9C27B0"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

</LinearLayout>
